♻ Solved the problem of links not showing and duplicated "home" in page footer.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1147,3 +1147,13 @@ pre code::-webkit-scrollbar-thumb {
     }
 
 }
+/* Changes to the footer and header links */
+
+.change-color-on-hover:hover{
+    text-decoration: underline !important;
+}
+.footer-social-icons:hover{
+    color: blue;
+    background-color: white;
+    border-radius: 25%;
+}
